Update home page and tour list page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="./assets/css/styles.css" />
-        <title>Hệ thống đặt tour du lịch</title>
+        <title>Trang chủ</title>
     </head>
     <body>
         <!-- HEADER -->
@@ -1660,7 +1660,7 @@
                     </div>
                     <div class="inner-logo">
                         <a href="#">
-                            <img src="assets/images/logo.png" alt="" />
+                            <img src="./assets/img/logo.svg" alt="" />
                         </a>
                     </div>
                     <nav class="inner-links">
@@ -1677,5 +1677,32 @@
             </div>
         </footer>
         <!-- End Footer -->
+
+        <!-- BOX CONTACT -->
+        <nav class="box-contact">
+            <ul>
+                <li>
+                    <a href="#!" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#!" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#!" target="_blank">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#!" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- END BOX CONTACT -->
     </body>
 </html>
