Update home page and domestic tours page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#!">Domestic Tours</a>
+                                    <a href="./domestic-tours.html"
+                                        >Domestic Tours</a
+                                    >
                                 </li>
                                 <li class="nav-item">
                                     <a href="#!">International Tours</a>
@@ -1459,7 +1461,7 @@
                         </div>
                     </div>
                     <div class="product-link">
-                        <a href="#!" class="btn">View All</a>
+                        <a href="./domestic-tours.html" class="btn">View All</a>
                     </div>
                 </div>
             </section>
@@ -1593,27 +1595,27 @@
             </section>
         </main>
 
-        <!-- FOOTER -->
+        <!-- Footer -->
         <footer class="footer">
             <div class="container">
                 <div class="inner-top">
                     <div class="inner-title">
-                        Sign up now to stay updated with our latest programs.
+                        Register now so you don’t miss any of our special offers
                     </div>
                     <form action="" class="inner-form">
                         <input
                             type="email"
                             name=""
-                            placeholder="Enter your email..."
+                            placeholder="Enter email..."
                         />
-                        <button>Sign Up</button>
+                        <button>Sign Up Now</button>
                     </form>
                 </div>
                 <div class="inner-middle">
                     <nav class="inner-links">
                         <ul>
                             <li>
-                                <a href="#">Home </a>
+                                <a href="#">Home</a>
                             </li>
                             <li>
                                 <a href="#">Domestic Tours</a>
@@ -1678,31 +1680,31 @@
         </footer>
         <!-- End Footer -->
 
-        <!-- BOX CONTACT -->
+        <!-- Box Contact -->
         <nav class="box-contact">
             <ul>
                 <li>
-                    <a href="#!" target="_blank">
-                        <i class="fa-brands fa-facebook"></i>
+                    <a href="#" target="_blank">
+                        <i class="fa-brands fa-facebook-f"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#!" target="_blank">
+                    <a href="#" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#!" target="_blank">
+                    <a href="#" target="_blank">
                         <i class="fa-brands fa-whatsapp"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#!" target="_blank">
+                    <a href="#" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
                 </li>
             </ul>
         </nav>
-        <!-- END BOX CONTACT -->
+        <!-- End Box Contact -->
     </body>
 </html>
