Update home and domestic tours

--- a/domestic-tours.html
+++ b/domestic-tours.html
@@ -159,12 +159,12 @@
 
                                     <div class="inner-group">
                                         <div class="inner-label">
-                                            So Luong Hanh Khach
+                                            Number of passengers
                                         </div>
                                         <div class="inner-input-list">
                                             <div class="inner-input-item">
                                                 <div class="inner-input-label">
-                                                    Nguoi lon:
+                                                    Adults:
                                                 </div>
                                                 <input
                                                     type="number"
@@ -175,7 +175,7 @@
 
                                             <div class="inner-input-item">
                                                 <div class="inner-input-label">
-                                                    Tre em:
+                                                    Children:
                                                 </div>
                                                 <input
                                                     type="number"
@@ -186,7 +186,7 @@
 
                                             <div class="inner-input-item">
                                                 <div class="inner-input-label">
-                                                    Em be:
+                                                    Infants:
                                                 </div>
                                                 <input
                                                     type="number"
@@ -613,7 +613,7 @@
                                     <div class="inner-image">
                                         <a href="#!">
                                             <img
-                                                src="./assets/img/product-5.jpg"
+                                                src="./assets/img/product-9.jpg"
                                                 alt=""
                                             />
                                         </a>
@@ -625,8 +625,8 @@
                                     <div class="inner-content">
                                         <h3 class="inner-title">
                                             <a href="#!">
-                                                Combo Tour 2024: Ha Noi - Lao
-                                                Cai - Sapa 4N3D
+                                                Combo Tour 2025: Sapa – Fansipan
+                                                – Ban Cat Cat
                                             </a>
                                         </h3>
                                         <div class="inner-prices">
@@ -695,7 +695,7 @@
                                     <div class="inner-image">
                                         <a href="#!">
                                             <img
-                                                src="./assets/img/product-6.jpg"
+                                                src="./assets/img/product-10.jpg"
                                                 alt=""
                                             />
                                         </a>
@@ -707,8 +707,8 @@
                                     <div class="inner-content">
                                         <h3 class="inner-title">
                                             <a href="#!">
-                                                Tour 2025 Phu Quoc - Thien Duong
-                                                Bao Ngoc (3N2D)
+                                                Tour 2025 Da Lat - Thanh pho
+                                                ngan hoa (3N2D)
                                             </a>
                                         </h3>
                                         <div class="inner-prices">
@@ -777,7 +777,7 @@
                                     <div class="inner-image">
                                         <a href="#!">
                                             <img
-                                                src="./assets/img/product-7.jpg"
+                                                src="./assets/img/product-11.jpg"
                                                 alt=""
                                             />
                                         </a>
@@ -789,8 +789,8 @@
                                     <div class="inner-content">
                                         <h3 class="inner-title">
                                             <a href="#!">
-                                                Combo Da Nang 2024: Da Nang -
-                                                Hoi An- Ba Na Hill
+                                                Combo Da Nang 2025: Phu Quoc -
+                                                Grand World
                                             </a>
                                         </h3>
                                         <div class="inner-prices">
@@ -859,7 +859,7 @@
                                     <div class="inner-image">
                                         <a href="#!">
                                             <img
-                                                src="./assets/img/product-8.jpg"
+                                                src="./assets/img/product-12.jpg"
                                                 alt=""
                                             />
                                         </a>
@@ -871,8 +871,8 @@
                                     <div class="inner-content">
                                         <h3 class="inner-title">
                                             <a href="#!">
-                                                Tour 2024: Nha Trang -
-                                                VinWonders - Dao Binh Ba
+                                                Tour 2025: Mien Tay - Chau Doc -
+                                                Rung Tram Tra Su
                                             </a>
                                         </h3>
                                         <div class="inner-prices">
