--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                             <div class="inner-image">
                                 <a href="#!">
                                     <img
-                                        src="./assets/img/product-5.jpg"
+                                        src="./assets/img/product-9.jpg"
                                         alt=""
                                     />
                                 </a>
@@ -686,8 +686,8 @@
                             <div class="inner-content">
                                 <h3 class="inner-title">
                                     <a href="#!">
-                                        Combo Tour 2024: Ha Noi - Lao Cai - Sapa
-                                        4N3D
+                                        Combo Tour 2025: Sapa – Fansipan – Ban
+                                        Cat Cat
                                     </a>
                                 </h3>
                                 <div class="inner-prices">
@@ -710,7 +710,8 @@
                                         Depature Date: <b>22/07/2024</b>
                                     </div>
                                     <div class="inner-desc-item">
-                                        Duration: <b>10 days 9 nights</b>
+                                        Duration:
+                                        <b>10 days 9 nights</b>
                                     </div>
                                 </div>
                                 <div class="inner-meta">
@@ -739,7 +740,7 @@
                             <div class="inner-image">
                                 <a href="#!">
                                     <img
-                                        src="./assets/img/product-6.jpg"
+                                        src="./assets/img/product-10.jpg"
                                         alt=""
                                     />
                                 </a>
@@ -751,8 +752,8 @@
                             <div class="inner-content">
                                 <h3 class="inner-title">
                                     <a href="#!">
-                                        Tour 2025 Phu Quoc - Thien Duong Bao
-                                        Ngoc (3N2D)
+                                        Tour 2025 Da Lat - Thanh pho ngan hoa
+                                        (3N2D)
                                     </a>
                                 </h3>
                                 <div class="inner-prices">
@@ -775,7 +776,8 @@
                                         Depature Date: <b>22/07/2024</b>
                                     </div>
                                     <div class="inner-desc-item">
-                                        Duration: <b>10 days 9 nights</b>
+                                        Duration:
+                                        <b>10 days 9 nights</b>
                                     </div>
                                 </div>
                                 <div class="inner-meta">
@@ -804,7 +806,7 @@
                             <div class="inner-image">
                                 <a href="#!">
                                     <img
-                                        src="./assets/img/product-7.jpg"
+                                        src="./assets/img/product-11.jpg"
                                         alt=""
                                     />
                                 </a>
@@ -816,8 +818,8 @@
                             <div class="inner-content">
                                 <h3 class="inner-title">
                                     <a href="#!">
-                                        Combo Da Nang 2024: Da Nang - Hoi An- Ba
-                                        Na Hill
+                                        Combo Da Nang 2025: Phu Quoc - Grand
+                                        World
                                     </a>
                                 </h3>
                                 <div class="inner-prices">
@@ -840,7 +842,8 @@
                                         Depature Date: <b>22/07/2024</b>
                                     </div>
                                     <div class="inner-desc-item">
-                                        Duration: <b>10 days 9 nights</b>
+                                        Duration:
+                                        <b>10 days 9 nights</b>
                                     </div>
                                 </div>
                                 <div class="inner-meta">
@@ -869,7 +872,7 @@
                             <div class="inner-image">
                                 <a href="#!">
                                     <img
-                                        src="./assets/img/product-8.jpg"
+                                        src="./assets/img/product-12.jpg"
                                         alt=""
                                     />
                                 </a>
@@ -881,8 +884,8 @@
                             <div class="inner-content">
                                 <h3 class="inner-title">
                                     <a href="#!">
-                                        Tour 2024: Nha Trang - VinWonders - Dao
-                                        Binh Ba
+                                        Tour 2025: Mien Tay - Chau Doc - Rung
+                                        Tram Tra Su
                                     </a>
                                 </h3>
                                 <div class="inner-prices">
@@ -905,7 +908,8 @@
                                         Depature Date: <b>22/07/2024</b>
                                     </div>
                                     <div class="inner-desc-item">
-                                        Duration: <b>10 days 9 nights</b>
+                                        Duration:
+                                        <b>10 days 9 nights</b>
                                     </div>
                                 </div>
                                 <div class="inner-meta">
@@ -930,7 +934,7 @@
                         </div>
                     </div>
                     <div class="product-link">
-                        <a href="#!" class="btn">View All</a>
+                        <a href="./domestic-tours.html" class="btn">View All</a>
                     </div>
                 </div>
             </section>
@@ -1205,7 +1209,7 @@
                             <div class="inner-image">
                                 <a href="#!">
                                     <img
-                                        src="./assets/img/product-5.jpg"
+                                        src="./assets/img/product-9.jpg"
                                         alt=""
                                     />
                                 </a>
@@ -1217,8 +1221,8 @@
                             <div class="inner-content">
                                 <h3 class="inner-title">
                                     <a href="#!">
-                                        Combo Tour 2024: Ha Noi - Lao Cai - Sapa
-                                        4N3D
+                                        Combo Tour 2025: Sapa – Fansipan – Ban
+                                        Cat Cat
                                     </a>
                                 </h3>
                                 <div class="inner-prices">
@@ -1241,7 +1245,8 @@
                                         Depature Date: <b>22/07/2024</b>
                                     </div>
                                     <div class="inner-desc-item">
-                                        Duration: <b>10 days 9 nights</b>
+                                        Duration:
+                                        <b>10 days 9 nights</b>
                                     </div>
                                 </div>
                                 <div class="inner-meta">
@@ -1270,7 +1275,7 @@
                             <div class="inner-image">
                                 <a href="#!">
                                     <img
-                                        src="./assets/img/product-6.jpg"
+                                        src="./assets/img/product-10.jpg"
                                         alt=""
                                     />
                                 </a>
@@ -1282,8 +1287,8 @@
                             <div class="inner-content">
                                 <h3 class="inner-title">
                                     <a href="#!">
-                                        Tour 2025 Phu Quoc - Thien Duong Bao
-                                        Ngoc (3N2D)
+                                        Tour 2025 Da Lat - Thanh pho ngan hoa
+                                        (3N2D)
                                     </a>
                                 </h3>
                                 <div class="inner-prices">
@@ -1306,7 +1311,8 @@
                                         Depature Date: <b>22/07/2024</b>
                                     </div>
                                     <div class="inner-desc-item">
-                                        Duration: <b>10 days 9 nights</b>
+                                        Duration:
+                                        <b>10 days 9 nights</b>
                                     </div>
                                 </div>
                                 <div class="inner-meta">
@@ -1335,7 +1341,7 @@
                             <div class="inner-image">
                                 <a href="#!">
                                     <img
-                                        src="./assets/img/product-7.jpg"
+                                        src="./assets/img/product-11.jpg"
                                         alt=""
                                     />
                                 </a>
@@ -1347,8 +1353,8 @@
                             <div class="inner-content">
                                 <h3 class="inner-title">
                                     <a href="#!">
-                                        Combo Da Nang 2024: Da Nang - Hoi An- Ba
-                                        Na Hill
+                                        Combo Da Nang 2025: Phu Quoc - Grand
+                                        World
                                     </a>
                                 </h3>
                                 <div class="inner-prices">
@@ -1371,7 +1377,8 @@
                                         Depature Date: <b>22/07/2024</b>
                                     </div>
                                     <div class="inner-desc-item">
-                                        Duration: <b>10 days 9 nights</b>
+                                        Duration:
+                                        <b>10 days 9 nights</b>
                                     </div>
                                 </div>
                                 <div class="inner-meta">
@@ -1400,7 +1407,7 @@
                             <div class="inner-image">
                                 <a href="#!">
                                     <img
-                                        src="./assets/img/product-8.jpg"
+                                        src="./assets/img/product-12.jpg"
                                         alt=""
                                     />
                                 </a>
@@ -1412,8 +1419,8 @@
                             <div class="inner-content">
                                 <h3 class="inner-title">
                                     <a href="#!">
-                                        Tour 2024: Nha Trang - VinWonders - Dao
-                                        Binh Ba
+                                        Tour 2025: Mien Tay - Chau Doc - Rung
+                                        Tram Tra Su
                                     </a>
                                 </h3>
                                 <div class="inner-prices">
@@ -1436,7 +1443,8 @@
                                         Depature Date: <b>22/07/2024</b>
                                     </div>
                                     <div class="inner-desc-item">
-                                        Duration: <b>10 days 9 nights</b>
+                                        Duration:
+                                        <b>10 days 9 nights</b>
                                     </div>
                                 </div>
                                 <div class="inner-meta">
@@ -1461,7 +1469,7 @@
                         </div>
                     </div>
                     <div class="product-link">
-                        <a href="./domestic-tours.html" class="btn">View All</a>
+                        <a href="#!" class="btn">View All</a>
                     </div>
                 </div>
             </section>
