Update home and domestic tours

--- a/index.html
+++ b/index.html
@@ -1623,10 +1623,12 @@
                     <nav class="inner-links">
                         <ul>
                             <li>
-                                <a href="#">Home</a>
+                                <a href="./index.html">Home</a>
                             </li>
                             <li>
-                                <a href="#">Domestic Tours</a>
+                                <a href="./domestic-tours.html"
+                                    >Domestic Tours</a
+                                >
                             </li>
                             <li>
                                 <a href="#">International Tours</a>
