--- a/domestic-tours.html
+++ b/domestic-tours.html
@@ -86,11 +86,13 @@
                         <nav class="inner-links">
                             <ul>
                                 <li>
-                                    <a href="#!">Home</a>
+                                    <a href="./index.html">Home</a>
                                     <i class="fa-solid fa-angles-right"></i>
                                 </li>
                                 <li>
-                                    <a href="#!">Domestic Tours</a>
+                                    <a href="./domestic-tours.html"
+                                        >Domestic Tours</a
+                                    >
                                     <i class="fa-solid fa-angles-right"></i>
                                 </li>
                             </ul>
@@ -1306,10 +1308,12 @@
                     <nav class="inner-links">
                         <ul>
                             <li>
-                                <a href="#">Home</a>
+                                <a href="./index.html">Home</a>
                             </li>
                             <li>
-                                <a href="#">Domestic Tours</a>
+                                <a href="./domestic-tours.html"
+                                    >Domestic Tours</a
+                                >
                             </li>
                             <li>
                                 <a href="#">International Tours</a>
