--- a/cart.html
+++ b/cart.html
@@ -34,7 +34,7 @@
                         </button>
                         <!-- LOGO -->
                         <div class="inner-logo">
-                            <a href="/index.html">
+                            <a href="./index.html">
                                 <img
                                     src="./assets/img/logo.svg"
                                     alt="TQD.TRAVEL"
@@ -47,15 +47,15 @@
                         <nav class="nav">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="/index.html">Home</a>
+                                    <a href="./index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/domestic-tours.html"
+                                    <a href="./domestic-tours.html"
                                         >Domestic Tours</a
                                     >
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/domestic-tours.html"
+                                    <a href="./domestic-tours.html"
                                         >International Tours</a
                                     >
                                 </li>
@@ -76,7 +76,7 @@
 
                         <!-- CART -->
                         <div class="inner-cart">
-                            <a href="/cart.html">
+                            <a href="./cart.html">
                                 <img src="assets/img/icon-cart.svg" alt="" />
                                 <span>1</span>
                             </a>
@@ -113,7 +113,7 @@
                                     <div class="inner-image">
                                         <a href="#">
                                             <img
-                                                src="/assets/img/banner-16.png"
+                                                src="./assets/img/banner-16.png"
                                                 alt=""
                                             />
                                         </a>
