--- a/tour-details.html
+++ b/tour-details.html
@@ -34,7 +34,7 @@
                         </button>
                         <!-- LOGO -->
                         <div class="inner-logo">
-                            <a href="/index.html">
+                            <a href="./index.html">
                                 <img
                                     src="./assets/img/logo.svg"
                                     alt="TQD.TRAVEL"
@@ -47,15 +47,15 @@
                         <nav class="nav">
                             <ul class="nav-list">
                                 <li class="nav-item">
-                                    <a href="/index.html">Home</a>
+                                    <a href="./index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/domestic-tours.html"
+                                    <a href="./domestic-tours.html"
                                         >Domestic Tours</a
                                     >
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/domestic-tours.html"
+                                    <a href="./domestic-tours.html"
                                         >International Tours</a
                                     >
                                 </li>
@@ -76,8 +76,8 @@
 
                         <!-- CART -->
                         <div class="inner-cart">
-                            <a href="/cart.html">
-                                <img src="/assets/img/icon-cart.svg" alt="" />
+                            <a href="./cart.html">
+                                <img src="./assets/img/icon-cart.svg" alt="" />
                                 <span>1</span>
                             </a>
                         </div>
@@ -90,7 +90,7 @@
             <!-- Box Breadcrumb -->
             <div class="box-breadcrumb">
                 <div class="inner-image">
-                    <img src="/assets/img/banner-7.jpg" alt="" />
+                    <img src="./assets/img/banner-7.jpg" alt="" />
                 </div>
                 <div class="inner-content">
                     <div class="container">
@@ -136,7 +136,7 @@
                                 <div class="inner-images-main">
                                     <div class="inner-image">
                                         <img
-                                            src="/assets/img/banner-8.jpg"
+                                            src="./assets/img/banner-8.jpg"
                                             alt=""
                                         />
                                     </div>
@@ -144,25 +144,25 @@
                                 <div class="inner-images-thumb">
                                     <div class="inner-image">
                                         <img
-                                            src="/assets/img/banner-9.jpg"
+                                            src="./assets/img/banner-9.jpg"
                                             alt=""
                                         />
                                     </div>
                                     <div class="inner-image">
                                         <img
-                                            src="/assets/img/banner-10.jpg"
+                                            src="./assets/img/banner-10.jpg"
                                             alt=""
                                         />
                                     </div>
                                     <div class="inner-image">
                                         <img
-                                            src="/assets/img/banner-11.jpg"
+                                            src="./assets/img/banner-11.jpg"
                                             alt=""
                                         />
                                     </div>
                                     <div class="inner-image">
                                         <img
-                                            src="/assets/img/banner-12.jpg"
+                                            src="./assets/img/banner-12.jpg"
                                             alt=""
                                         />
                                     </div>
@@ -188,7 +188,7 @@
                                         all.
                                     </p>
                                     <img
-                                        src="/assets/img/banner-14.jpg"
+                                        src="./assets/img/banner-14.jpg"
                                         alt=""
                                     />
                                     <p>
@@ -255,7 +255,7 @@
                                                 life.
                                             </p>
                                             <img
-                                                src="/assets/img/banner-15.png"
+                                                src="./assets/img/banner-15.png"
                                                 alt=""
                                             />
                                         </div>
@@ -288,7 +288,7 @@
                                                 area.
                                             </p>
                                             <img
-                                                src="/assets/img/banner-15.png"
+                                                src="./assets/img/banner-15.png"
                                                 alt=""
                                             />
                                             <p>
@@ -313,7 +313,7 @@
                                 <div class="inner-product">
                                     <div class="inner-image">
                                         <img
-                                            src="/assets/img/banner-13.jpg"
+                                            src="./assets/img/banner-13.jpg"
                                             alt=""
                                         />
                                     </div>
